# goit-ds-hw-03

./: docker-compose.yml  pyproject.toml
dz_1/: db_helper.py  main.py
mongo-data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-10347721781954012537.wt  collection-0-2608621813939644978.wt  collection-2-10347721781954012537.wt  collection-4-10347721781954012537.wt  collection-7-10347721781954012537.wt  index-1-10347721781954012537.wt  index-1-2608621813939644978.wt  index-3-10347721781954012537.wt  index-5-10347721781954012537.wt  index-6-10347721781954012537.wt  index-8-10347721781954012537.wt  index-9-10347721781954012537.wt  sizeStorer.wt
mongo-data/.mongodb/mongosh/: 67edae07346c1f03e66b140a_log  67edae07d91efcd0656b140a_log  config
mongo-data/diagnostic.data/: metrics.2025-04-02T21-37-11Z-00000  metrics.2025-04-02T21-37-25Z-00000  metrics.interim
