[project]
name = "goit-ds-hw-03"
version = "0.1.0"
description = ""
authors = [
    {name = "vitalii"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymongo (>=4.11.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
